# Horizon-Rendering-Library

./: .gitignore  CMakeLists.txt  README.md
doc/: index.html
docs/: CNAME  index.html
example/: CMakeLists.txt  main.c  main.cpp
src/: backend_vtable.h  hrl.cpp  hrl.h  hrl_gl.h
src/backend/d3d11/: d3d11_backend.cpp  d3d11_backend.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_texture.h
src/backend/opengl33/: gl33_backend.cpp  gl33_backend.h  gl33_renderer.cpp  gl33_renderer.h  gl33_ressources.h  gl33_shader.cpp  gl33_shader.h  gl33_texture.cpp  gl33_texture.h
src/core/: backend_vtable.h  object_types.h  utils_functions.cpp  utils_functions.h
src/ressources/: ressources.h
src/shaders/opengl/: sprite.frag.glsl  sprite.vert.glsl
tools/: embed.py
